[gd_scene load_steps=11 format=3 uid="uid://dte2li7iee18p"]

[ext_resource type="PackedScene" uid="uid://c41h162r5tvjh" path="res://UI/AbilityCooldowns/Fireball_Cooldown.tscn" id="1_ht01g"]
[ext_resource type="Script" path="res://UI/In_Game_UI/In_Game_UI.gd" id="1_ru75n"]
[ext_resource type="PackedScene" uid="uid://bhipjfcr34gqh" path="res://UI/AbilityCooldowns/Frost_Cooldown.tscn" id="2_rgj0g"]
[ext_resource type="PackedScene" uid="uid://dp8qrpiwj3f0s" path="res://UI/AbilityCooldowns/Lightning_Strike_Cooldown.tscn" id="3_rp55y"]
[ext_resource type="PackedScene" uid="uid://bilgp2fofscl4" path="res://UI/AbilityCooldowns/Dash_Cooldown.tscn" id="4_imfig"]
[ext_resource type="PackedScene" uid="uid://cihayvgfownob" path="res://UI/AbilityCooldowns/Ability_Icon.tscn" id="5_tf2i2"]
[ext_resource type="PackedScene" uid="uid://dvcwsvajpidw0" path="res://UI/AbilityCooldowns/Melee_Combo_Cooldown.tscn" id="7_78d7u"]
[ext_resource type="PackedScene" uid="uid://dwl7r8mseig7s" path="res://UI/AbilityCooldowns/Medical_Malarkey_Cooldown.tscn" id="8_af0kq"]
[ext_resource type="Texture2D" uid="uid://cpneq0drwg4en" path="res://Assets/Sprites/rpgiab_icon_pack_v1.3/32x32/help.png" id="9_ggt3c"]

[sub_resource type="LabelSettings" id="LabelSettings_2bev4"]
font_size = 31

[node name="InGameUi" type="CanvasLayer" groups=["In_Game_UI"]]
process_mode = 3
script = ExtResource("1_ru75n")

[node name="AbilityIcons" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -436.0
offset_top = -79.0
grow_horizontal = 0
grow_vertical = 0

[node name="Ability_Icon_1" parent="AbilityIcons" instance=ExtResource("5_tf2i2")]
position = Vector2(390, 35)
key = "Q"

[node name="Ability_Icon_2" parent="AbilityIcons" instance=ExtResource("5_tf2i2")]
position = Vector2(310, 35)
key = "E"

[node name="Ability_Icon_3" parent="AbilityIcons" instance=ExtResource("5_tf2i2")]
position = Vector2(230, 35)
key = "R"

[node name="Ability_Icon_4" parent="AbilityIcons" instance=ExtResource("5_tf2i2")]
position = Vector2(150, 35)
key = "F"

[node name="DashIcon" type="HBoxContainer" parent="."]
layout_direction = 2
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_right = 92.0
grow_vertical = 0

[node name="DashCooldown" parent="DashIcon" instance=ExtResource("4_imfig")]
position = Vector2(46, 35)
key = "Shift"

[node name="Ability_Icon_Templates" type="HBoxContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="FrostCooldown" parent="Ability_Icon_Templates" instance=ExtResource("2_rgj0g")]

[node name="FireballCooldown" parent="Ability_Icon_Templates" instance=ExtResource("1_ht01g")]

[node name="LightningStrikeCooldown" parent="Ability_Icon_Templates" instance=ExtResource("3_rp55y")]

[node name="MeleeComboCooldown" parent="Ability_Icon_Templates" instance=ExtResource("7_78d7u")]

[node name="MedicalMalarkeyCooldown" parent="Ability_Icon_Templates" instance=ExtResource("8_af0kq")]

[node name="PlayerMoney" type="Label" parent="."]
offset_left = 48.0
offset_top = 1.0
offset_right = 206.0
offset_bottom = 45.0
text = "Money: 0"
label_settings = SubResource("LabelSettings_2bev4")

[node name="MenuButton" type="MenuButton" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.14, 1.14)
icon = ExtResource("9_ggt3c")
item_count = 7
popup/item_0/text = "A,D - Move"
popup/item_1/text = "Space - Jump"
popup/item_1/id = 1
popup/item_2/text = "Shift - Dash"
popup/item_2/id = 2
popup/item_3/text = "W - Climb up wall"
popup/item_3/id = 3
popup/item_4/text = "Q,E,R,F - Abilities"
popup/item_4/id = 5
popup/item_5/text = "S - Slide down wall"
popup/item_5/id = 4
popup/item_6/text = "Left click - Attack"
popup/item_6/id = 6
